src/objects/Delete_Interface_Log_Extend__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Delete Interface Log Extend</label>
    <fields>
        <fullName>ActiveStartEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveStartEndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Query__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysBefore__c</fullName>
        <label>DaysBefore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProcessedBatch__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProcessedBatch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQL_Limit__c</fullName>
        <label>SQL_Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ToEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>